--- a/MotoActions/res/values/strings.xml
+++ b/MotoActions/res/values/strings.xml
@@ -17,8 +17,8 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Title and summary -->
-    <string name="moto_actions_title">Moto Ancillary</string>
-    <string name="moto_actions_summary">An Organization to Feature your Moto</string>
+    <string name="moto_actions_title">Moto Actions</string>
+    <string name="moto_actions_summary">Manage device gestures</string>
 
     <!-- Device gestures -->
     <string name="device_gestures_title">Device gestures</string>
